--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:dev": "vite build --mode development",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "test:build": "npm run build && npm run build:dev && echo 'Both build modes successful'"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.2",
-    "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0"
+    "jotai": "^2.12.5",
+    "node-fetch": "^3.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
