--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jotai": "^2.12.5",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
