--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "axios": "^1.9.0",
     "bootstrap": "^5.3.2",
     "jotai": "^2.12.5",
-    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.6.2"
@@ -24,7 +23,8 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.8",
-    "vitest": "^1.0.4"
+    "terser": "^5.42.0",
+    "vite": "^6.3.5",
+    "vitest": "^3.2.3"
   }
 }
