--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jotai": "^2.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
