--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "build:prod": "vite build --mode production",
     "preview": "vite preview",
+    "preview:prod": "vite preview --mode production",
+    "start": "vite preview --host 0.0.0.0 --port $PORT",
     "test": "vitest",
-    "test:build": "npm run build && npm run build:dev && echo 'Both build modes successful'"
+    "test:build": "npm run build && npm run build:dev && echo 'Both build modes successful'",
+    "lint": "eslint src --ext .js,.jsx",
+    "health-check": "curl -f http://localhost:$PORT/health || exit 1"
   },
   "dependencies": {
     "axios": "^1.9.0",
