UI Updates and tweaks

--- a/.env.development
+++ b/.env.development
@@ -49,5 +49,4 @@ VITE_F1_PREFETCH_NEXT_SEASON=false
 VITE_F1_ENABLE_SERVICE_WORKER=false
 
 # MCP Server Configuration - Production URLs (even in dev for integration testing)
-VITE_F1_MCP_SERVER_URL=https://f1-mcp-server-5dh3.onrender.com
-VITE_F1_LANGGRAPH_AGENTS_URL=https://f1-langgraph-agents.onrender.com
+VITE_F1_LANGGRAPH_AGENTS_URL=http://localhost:8000
