--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ dist-ssr
 .env.development.local
 .env.test.local
 .env.production.local
+.env.development
+.env.production
 
 # Editor directories and files
 .vscode/*
